--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
     <link rel="stylesheet" href="Timerstyle.css">
 </head>
 <body>
+    <div id="settings">
+        <input type="text" placeholder="How long">
+        <button>Close</button>
+    </div>
     <div id="timerBg"></div>
     <header>
         <img src="Img/settings_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" alt="" class="settingsIcon">
     </header>
     <div class="box">
         <div class="upperField">
-            <h2 id="timeLeft">00:00</h2>
-            <div id="pauseandplay">
-                <img id="pause" class="active img" src="Img/pause_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg" alt="" onclick="Pause()">
-                <img id="play" class="img" src="Img/play_arrow_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg" alt="" onclick="Play()">
-            </div>
+            <h2 id="timeLeft">0m</h2>
+            <button onclick="Start()">Start</button>
         </div>
-
         <div class="lowerField">
-            <p id="timeLearned">Du hast schon 00:00 gelernt</p>
+            <p id="timeLearned">Du hast schon 0m gelernt</p>
         </div>
     </div>
 
