--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <footer>
         <div class="goDown" onclick="toggleSettings()">
-            <img src="img/Pfeil nach unten.svg" alt="">
+            <img src="/img/Pfeil nach unten.svg" alt="">
         </div>
         <div class="controller">
             <p class="footerControlls" onclick="DecreaseTimer()">-</p>
