--- a/index.html
+++ b/index.html
@@ -12,14 +12,9 @@
 </head>
 <body>
     <div id="timerBg"></div>
-    <div class="box">
-        <div class="upperField">
-            <h2 id="timeLeft">0m</h2>
-            <button onclick="Start()" id="startBtn">Start</button>
-        </div>
-        <div class="lowerField">
-            <p id="timeLearned">Du hast schon 0m gelernt</p>
-        </div>
+    <div class="upperField">
+        <h2 id="timeLeft">20:00</h2>
+        <button onclick="Start()" id="startBtn">Start</button>
     </div>
     <footer>
         <div class="goDown" onclick="toggleSettings()">
