--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="Timerstyle.css">
 </head>
 <body>
+    <button id="modeSwitcher" onclick="toggleModes()" hidden>Ändere den Modus</button>
+    <div id="mode1"></div>
     <div id="timerBg"></div>
     <div class="upperField">
         <h2 id="timeLeft">20:00</h2>
