--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
-    <link rel="icon" href="/Img/Feather Clock.svg">
+    <link rel="icon" href="/Img/logo.svg">
     <link rel="stylesheet" href="Timerstyle.css">
 </head>
 <body>
