--- a/app.html
+++ b/app.html
@@ -50,7 +50,7 @@
         <div class="menu tr">
             <img class="icon" src="Img/volume-2.svg" alt="Clock Icon">
             <div class="menu-content">
-                <input type="range" name="" id="" min="0" max="100" onchange="setAudioVolume(this.value)">
+                <input type="range" name="" id="volumeSlider" min="0" max="100" onchange="setAudioVolume(this.value)">
             </div>
         </div>
     
