Added visuual thing

--- a/app.html
+++ b/app.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="Timerstyle.css">
 </head>
 <body>
+    <div id="overlay"></div>
     <button id="modeSwitcher" onclick="toggleModes()" hidden>Ändere den Modus</button>
     <div id="mode1"></div>
     <div id="timerBg"></div>
