--- a/index.html
+++ b/index.html
@@ -4,8 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="home.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    Hallo
+    <header><a href="index.html"><img src="HomePageImgs/logo.png" style="height: 10vh;"></a></header>
+    <section id="firstSection">
+        <div class="left">
+            <h1>FOCUS TIME</h1>
+            <p>In kürzerer Zeit mehr lernen?
+                Das geht mit Pomodoro. Pomodoro ist eine durch Studien unterstütze Lernstrategie. </p>
+            <a id="callToActionButton" href="app.html">Starte jetzt!</a>
+        </div>
+        <div class="right">
+            <img src="/HomePageImgs/PhonesTitel.png">
+        </div>
+    </section>
+    <section id="secondSection">
+        <div class="left">
+            <img src="/HomePageImgs/Diagram ARbeit usw.png">
+        </div>
+        <div class="right">
+            <h1>Was ist Pomodoro?</h1>
+            <p>Die Pomodoro-Technik fördert durch 25-minütige Arbeitsphasen mit Pausen die Konzentration und reduziert geistige Ermüdung. Studien belegen, dass regelmäßige Pausen die Produktivität und das kreative Denken verbessern.</p>
+            <a id="callToActionButton" href="app.html">Starte jetzt!</a>
+    </section>
+    <section id="thirdSection">
+        <div class="left">
+            <h1>Themen</h1>
+            <p>Eine große Auswahl an Themen ermöglicht es dir, ganz nach deinem eigenen Tempo und in deinem individuellen Stil zu lernen. </p>
+            <a id="callToActionButton" href="app.html">Starte jetzt!</a>
+        </div>
+        <div class="right">
+            <img src="/HomePageImgs/Themen.png">
+        </div>
+    </section>
+    <section id="fourthSection">
+        <div class="left">
+            <img src="/HomePageImgs/sparschwein.jpg">
+        </div>
+        <div class="right">
+            <h1>Immer kostenlos!</h1>
+            <p>Keine Werbung, keine In-App Käufe, kein tägliches Limit. <br> <br>Du wirst mit Focus Time für immer kostenlos lernen können. </p>
+            <a id="callToActionButton" href="app.html">Starte jetzt!</a>
+    </section>
+    <footer>©Maximilian Schmidt</footer>
 </body>
 </html>
