--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
             <a id="callToActionButton" href="app.html">Starte jetzt!</a>
         </div>
         <div class="right">
-            <img src="/HomePageImgs/PhonesTitel.png">
+            <div class="images">
+                <img src="mainPage/First/1.png" id="firstImg">
+                <img src="mainPage/First/2.png" id="secondImg">
+                <img src="mainPage/First/3.png" id="thirdImg">
+            </div>
         </div>
     </section>
     <section id="secondSection">
@@ -38,7 +42,13 @@
             <a id="callToActionButton" href="app.html">Starte jetzt!</a>
         </div>
         <div class="right">
-            <img src="/HomePageImgs/Themen.png">
+            <div class="images">
+                <img src="mainPage/second/1.png" id="thfirstImg">
+                <img src="mainPage/second/2.png" id="thsecondImg">
+                <img src="mainPage/second/3.png"id="ththirdImg">
+                <img src="mainPage/second/4.png" id="thfourthImg">
+                <img src="mainPage/second/5.png" id="thfiftImg">
+            </div>
         </div>
     </section>
     <section id="fourthSection">
