--- a/app.html
+++ b/app.html
@@ -17,7 +17,7 @@
     <div id="timerBg"></div>
     <div class="upperField">
         <h2 id="timeLeft">20:00</h2>
-        <button onclick="Start()" id="startBtn">Start</button>
+        <button id="startBtn">Start</button>
     </div>
     <div class="settings">
         <div class="menu bl">
@@ -59,10 +59,6 @@
             <a href="index.html"><img class="icon" src="Img/home.svg" alt="Clock Icon"></a>
         </div>
     </div>
-    
-
-
-
     <script src="timerscript.js"></script>
 </body>
 </html>
