--- a/app.html
+++ b/app.html
@@ -59,6 +59,7 @@
             <a href="index.html"><img class="icon" src="Img/home.svg" alt="Clock Icon"></a>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="timerscript.js"></script>
 </body>
 </html>
