--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <h1>Was ist Pomodoro?</h1>
             <p>Die Pomodoro-Technik fördert durch 25-minütige Arbeitsphasen mit Pausen die Konzentration und reduziert geistige Ermüdung. Studien belegen, dass regelmäßige Pausen die Produktivität und das kreative Denken verbessern.</p>
             <a id="callToActionButton" href="app.html">Starte jetzt!</a>
+        </div>
     </section>
     <section id="thirdSection">
         <div class="left">
@@ -61,6 +62,6 @@
             <p>Keine Werbung, keine In-App Käufe, kein tägliches Limit. <br> <br>Du wirst mit Focus Time für immer kostenlos lernen können. </p>
             <a id="callToActionButton" href="app.html">Starte jetzt!</a>
     </section>
-    <footer>©Maximilian Schmidt</footer>
+    <footer style="display: flex; align-items: center; justify-content: center; background: #001011; color: #eee; height: 5vh; border-radius: 20px 20px 0 0; width: 100%;">©Maximilian Schmidt</footer>
 </body>
 </html>
